--- a/realmadrid.html
+++ b/realmadrid.html
@@ -43,7 +43,7 @@
       <div class="row">
         <div class="col-md-8 mx-auto">
           <h1 class="mb-3 text-warning">Formasi Team&nbsp;</h1>
-          <img class="img-fluid d-block mx-auto" src="../../../Downloads/WhatsApp Image 2024-03-04 at 14.18.50.jpeg" width="750" style="">
+          <img class="img-fluid d-block mx-auto" src="assets/conference/WhatsApp Image 2024-03-04 at 14.18.50.jpeg" width="750" style="">
         </div>
       </div>
     </div>
